2019-02-06 Release 4.13.2
	- rewrite, correct, and simplify formula parsing
	- fix bug in add_column filter

2019-01-31 Release 4.13.1
	- fix setup.py to include new hxl.formulas package in the dist files (oops!)

2019-01-31 Release 4.13
	- add spreadsheet-style formulas calculated from a row's
	  contents: https://github.com/HXLStandard/hxl-proxy/wiki/Row-formulas
	- update add-column filter to support formula substitutions
	- improve error reporting for private HDX resources
	- fix bug with is min/is max aggregator and mixed datatypes
	- fix date normalisation to preserve original value (and log an
	  error) if parsing fails
	- bugfix for validation error when no row and/or column present

2018-12-03 Release 4.12
	- added concat() aggregator for CountFilter
	- added data_hash and columns_hash properties for
	  hxl.model.Dataset, together with hxlhash command-line script
	- fixed parsing of YYYY-MM-DD hh:mm:ss SQL dates
	- support opening zipped CSV files (thanks to Orest Dubay)

2018-08-31 Release 4.11
	- fixed date-cleaning bug when reading a filter definition from
	  JSON
	- added an option to send custom HTTP headers with a request for a
	  remote HXL file (e.g. a custom user agent)

2018-07-31 Release 4.10
	- refine delimiter detection for CSV
	- added append_external_list() method (and filter support) for an
	  external list of files to append
	- count filter now supports dates and strings for min() and max()
	  aggregators
	- add dayfirst parameter to normalise_date() (defaults to True)
	- have CleanFilter prescan the dataset for date cleaning, and
	  default to dayfirst unless unambiguous MMDD format is more common

2018-06-29 Release 4.9
	- support additional separators besides comma for CSV-like files
	  (including tab, semicolon, colon, and vertical bar)
	- allow absolute tag patterns ending in "!" (does not ignore extra
	  attributes)
	- fix bug in ReplaceDataFilter that raised an error when the
	  replacement was empty/None

2018-06-14 Release 4.8.4