@@ -45,7 +45,7 @@ import sys
 if sys.version_info < (3,):
     raise RuntimeError("libhxl requires Python 3 or higher")
 
-__version__="4.13.1"
+__version__="4.13.2"
 """Module version number
 see https://www.python.org/dev/peps/pep-0396/
 """
